<resources>
    <string name="app_name">Giwitter</string>
    <string name="username_hint">Your username</string>
    <string name="pwd_hint">Your password</string>
    <string name="connection">Connection</string>
    <string name="error_login">Login failed. Please check your login and password</string>
    <string name="error_signup">Signup failed</string>
    <string name="tchat_message">Your message</string>
    <string name="error_missing_msg">Missing message</string>
    <string name="error_send_msg">Error sending message</string>
    <string name="refresh">Refresh</string>
    <string name="register">Signup</string>
    <string name="name_hint">Name</string>
    <string name="firstname_hint">Firstname</string>
    <string name="error_no_token">No token. Can\'t display activity</string>
    <string name="settings">Settings</string>
    <string name="validate">OK</string>
    <string name="cancel">Cancel</string>
    <string name="url_signin">http://vps288382.ovh.net/api/1/user/login</string>
    <string name="url_signup">http://vps288382.ovh.net/api/1/user/register</string>
    <string name="url_msg">http://vps288382.ovh.net/api/1/private/message</string>
    <string name="disconnect">Disconnect</string>
    <string name="users">users</string>
    <string name="url_users">http://vps288382.ovh.net/api/1/private/user/list</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="url_photo">Url to a photo</string>
    <string name="tchat">Messages</string>
</resources>
